# elfibi

./: .gitignore  README.md  docker-compose.yml  nginx.conf  nginx.sh  pyproject.toml  riak.sh  serve.sh
fe/: Dockerfile  package-lock.json  package.json
fe/src/: App.js  index.js
fibi/: db.py  main.py  riak.py  routes.py
riak/docker/: Dockerfile  README.txt  bootstrap-schemas.sh
riak/schemas/: HeartRate.sql
tests/: test_fibi.py
